--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,9 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: 'bane-nor/actions-runner'
 
+permission:
+  contents: read
+
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
