feat(buildval): set token permissions
Added top-level token permissions for the workflow, which solves the security issue created by Scorecard.

Signed-off-by: Roberth Strand <roberth.strand2@banenor.no>

--- a/.github/workflows/build-validation.yaml
+++ b/.github/workflows/build-validation.yaml
@@ -8,6 +8,8 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: 'bane-nor/actions-runner'
 
+permissions: read-all
+
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
